tests/sema/fail/v35_fail_ptr_builtin.ep
# COMPILE_FAIL_CONTAINS: ptr cannot take the address of builtin println

fun main(): void {
    let callback = ptr(println)
}
